[package]
name = "dora"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/RustTemplate"
repository = "https://github.com/oovm/RustTemplate"
documentation = "https://docs.rs/orm"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
dashmap = { version = "6.1.0", features = ["serde"], optional = true }
limbo_core = { version = "0.0.16", features = ["uuid", "json"], optional = true }
uuid = { version = "1.15.1", features = ["serde", "v7"] }
async-trait = "0.1.87"

[dev-dependencies]

[features]
default = []
server = ["limbo_core"]
client = []

[package.metadata.docs.rs]
all-features = true
