[package]
name = "danki-orm"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
categories = ["rust-patterns"]
homepage = "https://github.com/oovm/RustTemplate"
repository = "https://github.com/oovm/RustTemplate"
documentation = "https://docs.rs/orm"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ['http', 'axum', "d1"] }
worker-macros = { version = "0.5.0", features = ['http'] }

axum = { version = "0.8.1", default-features = false }
aide = { version = "0.14.2", features = ["axum", "axum-json"] }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
serde = { version = "1.0.219", features = ["derive"] }
schemars = { version = "0.8.22", features = ["uuid1", "chrono"]}
sqlx = { version = "0.8.3", features = ["uuid", "chrono"] }
sqlx-d1 = { version = "0.1.4", features = ["uuid", "chrono"] }
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.15.1", features = ["serde", "v7", "js"] }

[features]
default = []
#server = ["sqlx"]

[package.metadata.docs.rs]
all-features = true
